--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 <body>
 
     <div class="container">
-        <h1>Hello Gullary Img Site</h1>
+        <div class="row mt-5">
+            <div class="col-4">
+                <div class="row mb-3">
+                    <img class="img-fluid" src="./img/pic2.jpg" alt="">
+                </div>
+                <div class="row">
+                    <img class="img-fluid" src="./img/pic3.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="row">
+                    <img src="./img/pic7.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-4"></div>
+        </div>
     </div>
 
 </body>
