second column added

--- a/index.html
+++ b/index.html
@@ -23,11 +23,22 @@
                 </div>
             </div>
             <div class="col-4">
-                <div class="row">
-                    <img src="./img/pic7.jpg" alt="">
+                <div class="row mb-3">
+                    <img class="img-fluid" src="./img/pic4.jpg" alt="">
+                </div>
+                <div class="row mb-3">
+                    <img class="img-fluid" src="./img/pic5.jpg" alt="">
+                </div>
+                <div class="row mb-3">
+                    <img class="img-fluid" src="./img/pic6.jpg" alt="">
+                </div>
+                <div class="row mb-3">
+                    <img class="img-fluid" src="./img/pic7.jpg" alt="">
                 </div>
             </div>
-            <div class="col-4"></div>
+            <div class="col-4">
+
+            </div>
         </div>
     </div>
 
