--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
                 </div>
             </div>
             <div class="col-4">
-
+                <div class="row mb-3">
+                    <img src="./img/pic8.jpg" alt="">
+                </div>
+                <div class="row mb-3">
+                    <img src="./img/sunglass.jpg" alt="">
+                </div>
+                <div class="row mb-3">
+                    <img src="./img/pic10.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
